@@ -21,12 +21,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
-                    <release>11</release>
-                <!--     <source>1.8</source>
-                    <target>1.8</target> -->
+                    <release>12</release> <!-- java版本 --> 
+                    <!-- <source>1.8</source> java版本 -->
+                    <!-- <target>1.8</target> java子版本 -->
                     <encoding>UTF-8</encoding>
                 </configuration>
                 <dependencies>
@@ -46,16 +46,6 @@
             <plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-surefire-plugin</artifactId>
-			    <version>2.22.0</version>
-			    <configuration>
-			        <argLine>
-			            --illegal-access=permit
-			        </argLine>
-			    </configuration>
-			</plugin>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-failsafe-plugin</artifactId>
 			    <version>2.22.0</version>
 			    <configuration>
 			        <argLine>
@@ -230,7 +220,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.0.1-jre</version>
+            <version>27.1-jre</version>
             <scope>compile</scope>
         </dependency>
 
@@ -288,7 +278,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.7</version>
+            <version>4.5.8</version>
         </dependency>
         
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
@@ -302,7 +292,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.8.1</version>
+            <version>3.9</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
